Refactor index.html for improved structure and clarity

--- a/index.html
+++ b/index.html
@@ -4,66 +4,62 @@
   <meta charset="UTF-8" />
   <title>Check Your Flat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <link rel="icon" href="Logo.png" />
-  <link rel="stylesheet" href="./css/style.css" />
-
-  <!-- jsPDF -->
+  <link rel="stylesheet" href="css/style.css" />
+  <!-- jsPDF for PDF generation -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-
-  <script src="./js/app.js" defer></script>
+  <script src="js/main.js" defer></script>
 </head>
-
 <body>
 <div class="app">
-
-  <!-- SIDEBAR -->
+  <!-- SIDEBAR (desktop) -->
   <aside class="sidebar" id="sidebar">
     <div class="brand">
       <div class="brand-logo">
-        <img src="Logo.png" alt="CYF Logo">
+        <!-- If Logo.png exists it will show, otherwise the gradient circle still looks nice -->
+        <img src="Logo.png" alt="CYF Logo" onerror="this.style.display='none';this.parentNode.textContent='CYF';" />
       </div>
       <div class="brand-text">
         <h1>Check Your Flat</h1>
         <span>Inspector view – Berlin</span>
       </div>
     </div>
-
-    <button id="sidebar-toggle" class="sidebar-toggle">«</button>
+    <button id="sidebar-toggle" class="sidebar-toggle" title="Collapse / expand sidebar">«</button>
 
     <nav>
       <button class="nav-item active" data-view="new">
-        <span class="icon">➕</span> New Inspection
+        <span class="icon">➕</span>
+        <span>New Inspection</span>
       </button>
       <button class="nav-item" data-view="history">
-        <span class="icon">📂</span> History
+        <span class="icon">📂</span>
+        <span>History</span>
       </button>
       <button class="nav-item nav-logout" data-view="logout">
-        <span class="icon">🚪</span> Logout
+        <span class="icon">🚪</span>
+        <span>Logout</span>
       </button>
     </nav>
   </aside>
 
-  <!-- MAIN -->
+  <!-- MAIN AREA -->
   <main class="main">
     <header class="hero">
       <div class="hero-badge">
-        <span class="icon">✅</span> Compare reality vs exposé with photos & signature.
+        <span class="icon">✅</span>
+        <span>Compare reality vs exposé, with photos & signature.</span>
       </div>
-
       <h1 class="hero-title">check your flat</h1>
-
       <p class="hero-subtitle">
         Upload the exposé, walk through the flat, compare reality vs listing,
-        add photos, sign and export your PDF report — all from your phone.
+        add photos with markers, sign and export a PDF report – all from your phone.
       </p>
       <div class="hero-wave"></div>
     </header>
 
     <section class="content">
       <div class="card-shell">
-
-        <!-- Steps bar -->
+        <!-- HORIZONTAL STEP BAR -->
         <div class="steps-floating" id="steps-floating">
           <div class="steps-inner">
             <button data-step="1" class="active unlocked">1</button>
@@ -72,7 +68,7 @@
           </div>
         </div>
 
-        <!-- Mobile menu -->
+        <!-- MOBILE LEFT FLOATING MENU -->
         <div class="mobile-left-menu" id="mobile-left-menu">
           <button id="mobile-left-toggle" class="mobile-left-toggle">☰</button>
           <div class="mobile-left-items">
@@ -87,23 +83,29 @@
           <div class="step-header">
             <div class="step-title">
               <span class="step-chip">1</span>
-              Upload exposé (PDF)
-              <span class="step-badge">Start here</span>
+              <span>Upload exposé (mock)</span>
+              <span class="step-badge">PDF import wizard – TODO</span>
             </div>
-            <div class="step-help">After loading, step 2 unlocks.</div>
+            <div class="step-help">
+              Drag &amp; drop the exposé PDF or use the Berlin mock.
+              Later the wizard will auto-extract fields into the next step.
+            </div>
           </div>
 
-          <div id="drop-area" class="drop-area">
-            <h3>Drop the exposé PDF here</h3>
-            <p>or choose a file</p>
-
-            <button type="button" id="select-file-btn" class="upload-btn-main">Browse file</button>
-            <input type="file" id="file-input" accept="application/pdf" style="display:none;" />
-
+          <div class="upload-area" id="drop-zone">
+            <div class="upload-icon">📄</div>
+            <p class="upload-title">Drop exposé PDF here</p>
+            <p class="upload-subtitle">
+              (For now this is just a mock – we only read the file name.)
+            </p>
+            <button type="button" id="select-file-btn" class="upload-btn-main">
+              Make the magic ✨
+            </button>
+            <input type="file" id="file-input" accept="application/pdf" style="display:none" />
             <div id="file-info" class="file-info">No file loaded yet.</div>
 
             <div id="load-example-btn" class="example-chip">
-              🏙️ Load fake Berlin exposé (Kantstraße 123)
+              <span>🏙️ Use fake Berlin example (Kantstraße 123)</span>
             </div>
           </div>
         </section>
@@ -113,11 +115,12 @@
           <div class="step-header">
             <div class="step-title">
               <span class="step-chip">2</span>
-              Maske Inspektion – Reality vs Exposé
-              <span class="step-badge">Mandatory fields *</span>
+              <span>Maske Inspektion – Reality vs Exposé</span>
+              <span class="step-badge">Mandatory fields marked *</span>
             </div>
             <div class="step-help">
-              Fill the reality column. “Copy from exposé” is optional.
+              Column “🏢 Exposé” is read-only. Fill “✅ Reality” on site.
+              Use “Copy from exposé” to speed up.
             </div>
           </div>
 
@@ -130,24 +133,33 @@
                   <th>✅ Reality</th>
                 </tr>
               </thead>
-              <tbody id="comparison-body"></tbody>
+              <tbody id="comparison-body">
+                <!-- rows injected by JS -->
+              </tbody>
             </table>
-
             <div class="table-actions">
               <div>
-                <button id="add-text-row-btn" class="btn-chip">＋ Add custom text row</button>
-                <button id="add-photo-row-btn" class="btn-chip">📷 Add photo row</button>
+                <button type="button" id="add-text-row-btn" class="btn-chip">
+                  ＋ Add custom text row
+                </button>
+                <button type="button" id="add-photo-row-btn" class="btn-chip">
+                  📷 Add photo row
+                </button>
               </div>
               <div>
-                <button id="reset-example-btn" class="btn-chip primary">Reset from example</button>
-                <button id="mock-autofill-btn" class="btn-chip mock">🧪 Auto-fill sample notes</button>
+                <button type="button" id="reset-example-btn" class="btn-chip primary">
+                  Reset to Maske Inspektion (Berlin example)
+                </button>
+                <button type="button" id="mock-autofill-btn" class="btn-chip mock">
+                  🧪 Auto-fill sample notes (mock)
+                </button>
               </div>
             </div>
           </div>
 
-          <div class="right">
-            <button id="go-step3-btn" class="btn-primary">
-              Continue to Step 3 (PDF)
+          <div style="display:flex;justify-content:flex-end;margin-top:10px;">
+            <button type="button" id="go-step3-btn" class="btn-primary">
+              Continue to Step 3 (summary &amp; PDF)
             </button>
           </div>
         </section>
@@ -157,78 +169,90 @@
           <div class="step-header">
             <div class="step-title">
               <span class="step-chip">3</span>
-              Validator, signature & PDF
+              <span>Validator, signature &amp; PDF</span>
               <span class="step-badge">Final step</span>
             </div>
             <div class="step-help">
-              Name & signature appear in the PDF.
+              Name & signature appear at the bottom of the report.
             </div>
           </div>
 
           <div class="field-row">
-            <label for="validator">Validator name *</label>
+            <label for="validator">
+              Validator / inspector name <span style="color:#d62839">*</span>
+            </label>
             <input id="validator" placeholder="e.g. Max Mustermann" />
           </div>
 
-          <div class="sig-container">
-            <div class="sig-label">Signature</div>
-            <canvas id="signature-pad"></canvas>
+          <p style="font-size:11px;color:#7a719d;margin-bottom:4px;">
+            Logo: if <strong>Logo.png</strong> exists in the same folder, it will be used in the header
+            (fallback CYF circle otherwise).
+          </p>
 
+          <div class="sig-container">
+            <div class="sig-label">
+              Signature (sign with your finger on mobile – will be saved in the PDF)
+            </div>
+            <canvas id="signature-pad"></canvas>
             <div class="sig-actions">
-              <button id="clear-signature-btn" class="btn-outline">Clear</button>
-              <span>Sign, then tap “Generate PDF”.</span>
+              <button type="button" id="clear-signature-btn" class="btn-outline">
+                Clear signature
+              </button>
+              <span>Sign now, then tap “Generate &amp; Preview PDF”.</span>
             </div>
           </div>
 
-          <div class="right">
-            <button id="generate-pdf-btn" class="btn-primary">
-              Generate & Preview PDF
+          <div style="display:flex;justify-content:flex-end;margin-top:10px;">
+            <button type="button" id="generate-pdf-btn" class="btn-primary">
+              Generate &amp; Preview PDF
             </button>
           </div>
         </section>
 
         <!-- HISTORY -->
         <section class="card" id="history-card">
-          <div class="history-title">History (local)</div>
+          <div class="history-title">History (local to this browser)</div>
           <div id="history-list"></div>
         </section>
-
       </div>
     </section>
   </main>
 </div>
 
-<!-- PDF MODAL -->
+<!-- PDF PREVIEW MODAL -->
 <div id="pdf-modal-backdrop" class="modal-backdrop">
   <div class="modal">
     <div class="modal-header">
-      <h2>🦉 Preview inspection report</h2>
+      <h2><span>🦉</span> Preview inspection report</h2>
       <div id="modal-validator-label"></div>
-      <button id="close-modal-btn" class="close-x">&times;</button>
+      <button type="button" id="close-modal-btn" class="close-x">&times;</button>
     </div>
     <div class="modal-body">
-      <iframe id="pdf-preview-frame"></iframe>
+      <iframe id="pdf-preview-frame" title="PDF preview"></iframe>
     </div>
     <div class="modal-footer">
       <span id="modal-validator-footer"></span>
       <div>
-        <button id="cancel-download-btn" class="btn-outline">Cancel</button>
-        <button id="approve-download-btn" class="btn-primary">Approve & Download</button>
+        <button type="button" id="cancel-download-btn" class="btn-outline">
+          Cancel
+        </button>
+        <button type="button" id="approve-download-btn" class="btn-primary">
+          Approve &amp; Download
+        </button>
       </div>
     </div>
   </div>
 </div>
 
-<!-- CAMERA -->
+<!-- CAMERA MODAL -->
 <div id="camera-modal">
   <div class="camera-inner">
     <button id="camera-close">✕ Close</button>
     <video id="camera--view" autoplay playsinline></video>
-    <button id="camera--trigger">Take picture</button>
+    <button id="camera--trigger">Take a picture</button>
     <canvas id="camera--sensor" style="display:none;"></canvas>
-    <img id="camera--output" style="display:none;">
+    <img src="//:0" alt="" id="camera--output" style="display:none;"/>
   </div>
 </div>
-
 </body>
 </html>
