--- a/index.html
+++ b/index.html
@@ -79,12 +79,11 @@
           <div class="step-header">
             <div class="step-title">
               <span class="step-chip">1</span>
-              <span>Upload exposé (mock)</span>
-              <span class="step-badge">PDF import wizard – TODO</span>
+              <span>Upload exposé (PDF)</span>
+              <span class="step-badge">Starts here</span>
             </div>
             <div class="step-help">
-              Drag &amp; drop the exposé PDF or use the Berlin mock.
-              Later the wizard will auto-extract fields into the next step.
+             After loading, step 2 unlocks.
             </div>
           </div>
 
@@ -92,7 +91,7 @@
             <div class="upload-icon">📄</div>
             <p class="upload-title">Drop exposé PDF here</p>
             <p class="upload-subtitle">
-              (For now this is just a mock – we only read the file name.)
+              or tap the button to pick it from your phone.
             </p>
             <button type="button" id="select-file-btn" class="upload-btn-main">
               Make the magic ✨
