--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
               <span class="step-badge">Mandatory fields marked *</span>
             </div>
             <div class="step-help">
-              Column “🏢 Exposé” is read-only. Fill “✅ Reality” on site.
-              Use “Copy from exposé” to speed up.
+               Fill reality; "Copy from exposé" just helps you start.
             </div>
           </div>
 
