--- a/index.html
+++ b/index.html
@@ -208,6 +208,9 @@
           <div class="history-title">History (local to this browser)</div>
           <div id="history-list"></div>
         </section>
+
+        <!-- Version lives OUTSIDE the history card -->
+        <div id="version-info" class="version-info"></div>
       </div>
     </section>
   </main>
