Update index.html CLEAR HISTORY

--- a/index.html
+++ b/index.html
@@ -204,10 +204,11 @@
         </section>
 
         <!-- HISTORY -->
-        <section class="card" id="history-card">
-          <div class="history-title">History (local to this browser)</div>
-          <div id="history-list"></div>
-        </section>
+        <div class="history-header">
+          <h3>History (local to this browser)</h3>
+          <button id="clear-history-btn" class="clear-history-btn">Clear</button>
+        </div>
+
 
         <!-- Version lives OUTSIDE the history card -->
         <div id="version-info" class="version-info"></div>
