Update index.html rollback 1.2.98 +minimum wording

--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
             <div class="step-title">
               <span class="step-chip">1</span>
               <span>Upload exposé (PDF)</span>
-              <span class="step-badge">Starts here</span>
             </div>
             <div class="step-help">
              After loading, step 2 unlocks.
@@ -91,7 +90,6 @@
             <div class="upload-icon">📄</div>
             <p class="upload-title">Drop exposé PDF here</p>
             <p class="upload-subtitle">
-              or tap the button to pick it from your phone.
             </p>
             <button type="button" id="select-file-btn" class="upload-btn-main">
               Make the magic ✨
@@ -110,8 +108,7 @@
           <div class="step-header">
             <div class="step-title">
               <span class="step-chip">2</span>
-              <span>Maske Inspektion – Reality vs Exposé</span>
-              <span class="step-badge">Mandatory fields marked *</span>
+              <span>Maske Inspektion</span>
             </div>
             <div class="step-help">
                Fill reality; "Copy from exposé" just helps you start.
@@ -166,9 +163,6 @@
               <span>Validator, signature &amp; PDF</span>
               <span class="step-badge">Final step</span>
             </div>
-            <div class="step-help">
-              Name & signature appear at the bottom of the report.
-            </div>
           </div>
           
           <div class="field-row">
@@ -179,8 +173,6 @@
           </div>
 
           <p style="font-size:11px;color:#7a719d;margin-bottom:4px;">
-            Logo: if <strong>Logo.png</strong> exists in the same folder, it will be used in the header
-            (fallback CYF circle otherwise).
           </p>
 
           <div class="sig-container">
@@ -205,8 +197,8 @@
 
         <!-- HISTORY -->
         <div class="history-header">
-          <h3>History (local to this browser)</h3>
-          <button id="clear-history-btn" class="clear-history-btn">Clear</button>
+          <h3>History</h3>
+
         </div>
 
 
