--- a/index.html
+++ b/index.html
@@ -196,12 +196,14 @@
         </section>
 
         <!-- HISTORY -->
+      <div class="history-section">
         <div class="history-header">
-          <h3>History</h3>
-
+          <h3>History (local to this browser)</h3>
+          <!-- optional clear button here -->
         </div>
-
-
+      
+        <div id="history-list"></div>
+      </div>
         <!-- Version lives OUTSIDE the history card -->
         <div id="version-info" class="version-info"></div>
       </div>
