--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
   <title>Check Your Flat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="Logo.png" />
-  <link rel="stylesheet" href="css/style.css" />
+  
+  <!-- Base + layout + components CSS split for readability -->
+  <link rel="stylesheet" href="css/base.css" />
+  <link rel="stylesheet" href="css/layout.css" />
+  <link rel="stylesheet" href="css/components.css" />
+  <link rel="stylesheet" href="css/responsive.css" />
   <!-- jsPDF for PDF generation -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="js/main.js" defer></script>
+  <script src="js/core.js" defer></script>
+<script src="js/step1.js" defer></script>
+<script src="js/step2.js" defer></script>
+<script src="js/step3.js" defer></script>
+<script src="js/history.js" defer></script>
 </head>
 <body>
 <div class="app">
