Update index.html delete History no need text

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <!-- HISTORY -->
       <div class="history-section">
         <div class="history-header">
-          <h3>History (local to this browser)</h3>
+          <h3>History</h3>
           <!-- optional clear button here -->
         </div>
       
