Update index.html ADD CONTINUE BUTTON TO STEP 4

--- a/index.html
+++ b/index.html
@@ -227,6 +227,12 @@
               </p>
             </div>
           </div>
+          <div style="display:flex;justify-content:flex-end;margin-top:10px;">
+            <button type="button" id="go-step4-btn" class="btn-primary">
+              Continue to Step 4 (Validator &amp; PDF)
+            </button>
+          </div>
+
         </section>
 
         <!-- STEP 4 – Validator & PDF -->
