Update index.html Finanzierung und Rechtliche Beratung

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <div class="step-header">
             <div class="step-title">
               <span class="step-chip">3</span>
-              <span>Legal &amp; Finance</span>
+              <span>Finanzierung & Rechtliche Beratung</span>
             </div>
             <div class="step-help">
               Tell us whether the client already has legal and financial advisors.
